<resources>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="app_name">Captura</string>
    <string name="FormServerURI_title">URL</string>
    <string name="FormServerURI_summary">Server\'s URL</string>
    <string name="form_title">Forms</string>
    <string name="settings_title">Settings</string>
    <string name="home_title">Home</string>
    <string name="capture_photo">Capture Image</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="server_title">Server</string>
    <string name="user_title">User</string>
    <string name="user_summary">User</string>
    <string name="password_title">Password</string>
    <string name="password_summary">Password</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="main_menu">Main menu</string>
    <string name="data_saved">Data Saved</string>
    <string name="discard_form">Discard</string>
    <string name="discard_form_question">Are you sure you wish to discard the changes?</string>
    <string name="loading">Loading</string>
    <string name="data_sent_notification">Synchronization successful</string>
    <string name="data_sent_with_error_notification">Synchronization with errors</string>
    <string name="server_unreachable_try_again">Server Unreachable. Try again?</string>
    <string name="welcome_01_email">Email</string>
    <string name="welcome_01_hint_mail">Email</string>
    <string name="welcome_01_password">Password</string>
    <string name="welcome_01_password_hint">Password</string>
    <string name="welcome_01_next">Next</string>
    <string name="welcome_01_default_server">Default Server</string>
    <string name="welcome_02_next">Next</string>
    <string name="welcome_02_server_url">Server URL</string>
    <string name="sync">Synchronize</string>
    <string name="change_app">Change App</string>
    <string name="tab_projects">Projects</string>
    <string name="tab_forms">Forms</string>
    <string name="tab_documents">Documents</string>
    <string name="select_your_app">Select your application</string>
    <string name="sync_error">Synchronization Error</string>
    <string name="sync_failed_try_again">Sorry, the synchronization failed. Try Again?</string>
    <string name="sync_failed_authentication_error">Authentication error. Please check your credentials</string>
    <string name="sync_failed_bad_configuration">Bad configuration. Please contact technical support</string>
    <string name="sync_failed_connection_failed_try_again">Connection failed. Try Again?</string>
    <string name="connection_failed">Connection failed</string>
    <string name="sync_failed_connection_timeout_try_again">Connection timeout. Try Again?</string>
    <string name="sync_failed_connection_timeout">Connection timeout</string>
    <string name="sync_failed_http_error_try_again">HTTP Error. If the problem persists contact technical support. Try Again?</string>
    <string name="sync_failed_http_error">HTTP Error. If the problem persists contact technical support</string>
    <string name="sync_failed_parse_error_try_again">Parse Error. If the problem persists contact technical support. Try Again?</string>
    <string name="sync_failed_parse_error">Parse Error. If the problem persists contact technical support</string>
    <string name="sync_failed_session_error_try_again">Session Error. If the problem persists contact technical support. Try Again?</string>
    <string name="sync_failed_session_error">Session Error. If the problem persists contact technical support</string>
    <string name="sync_failed">Sorry, the synchronization failed.</string>
    <string name="sync_applications_not_active">We are sorry. the application is not active.</string>
    <string name="no">No</string>
    <string name="save_data_failed">An Exception occurred and data couldn\'t be saved</string>
    <string name="applications">Applications</string>
    <string name="logout">Logout</string>
    <string name="account_title">Account</string>
    <string name="logout_summary">Tap to logout</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="login">Login</string>
    <string name="error">Error</string>
    <string name="form_is_null">Form is null</string>
    <string name="not_yet_impl">NOT YET IMPLEMENTED</string>
    <string name="select_choose_option">Choose an Option</string>
    <string name="application">Application</string>
    <string name="version">Version</string>
    <string name="no_target">No next page defined!</string>
    <string name="unknown_format_for">Unknown format for</string>
    <string name="required">Required</string>
    <string name="get_current_location">Get current location</string>
    <string name="resolving">Resolving</string>
    <string name="show_on_map">Show on map</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="accuracy">Accuracy</string>
    <string name="no_location">No location</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="stop">Stop</string>
    <string name="save_and_new">Save &amp; New</string>
    <string name="document_saved_at">Saved at %s</string>
    <string name="document_synced_at">Synced at %s</string>
    <string name="sync_in_progress">Synchronization in progress</string>
    <string name="sync_started_ticker">Synchronization started</string>
    <string name="server_error">Server error</string>
    <string name="response_code">Response code</string>
    <string name="one_entry_synced">one document synced</string>
    <string name="entries_synced">%d documents synced</string>
    <string name="one_entry_rejected">one document rejected</string>
    <string name="entries_rejected">%d documentos rejected</string>
    <string name="change_app_confirmation">Are you sure you want to switch to another Captura App?</string>
    <string name="change_app_summary">Change to another Captura App</string>
    <string name="clear_documents">Clear synced documents</string>
    <string name="synchronizing_metadata">Synchronizing metadata</string>
    <string name="clear_documents_message">All synced documents will be deleted. Do you wish to continue?</string>
    <string name="server_unreachable">Server Unreachable</string>
    <string name="unexpected_error">Unexpected Error</string>
    <string name="invalid_user">Invalid User</string>
    <string name="database_copied">SQLite file copied to %s</string>
    <string name="database_copied_title">Database copied</string>
    <string name="sync_attempts">Sync attempts : %d</string>
    <string name="form_id">Form id</string>
    <string name="synchronization">Synchronization</string>
    <string name="document">Document</string>
    <string name="status">Status</string>
    <string name="message">Message</string>
    <string name="document_info_title">Document Data</string>
    <string name="saved_at">Saved at</string>
    <string name="synced_at">Synced at</string>
    <string name="retries">Retries</string>
    <string name="last_failure">Last failure</string>
    <string name="fail_message_info">Fail message</string>
    <string name="status_failed">Failed</string>
    <string name="status_in_progress">In Progress</string>
    <string name="status_rejected">Rejected</string>
    <string name="status_synced">Synchronized</string>
    <string name="status_not_synced">Not Synchronized</string>
    <string name="no_form_definition_title">No Form Definition</string>
    <string name="no_form_definition_message">Couldn\'t load form definition</string>
    <string name="no_handle">Could not obtain an upload handle</string>
    <string name="logging_in_title">Logging in</string>
    <string name="logging_in_message">Logging in&#8230;</string>
    <string name="invalid_login_title">Invalid login</string>
    <string name="invalid_login_message">Login unsuccessful, please check your credentials and the server\'s URL</string>
    <string name="unsuccessful_login_too_many_devices_title">Too many devices</string>
    <string name="unsuccessful_login_too_many_devices_message">Login unsuccessful, the user has too many devices</string>
    <string name="unsuccessful_login_response_code_not_200_title">Invalid server response</string>
    <string name="unsuccessful_login_response_code_not_200_message">Login unsuccessful, invalid server response. Please check the server\'s URI and contact technical support</string>
    <string name="unsuccessful_login_no_cookie_title">No cookie</string>
    <string name="unsuccessful_login_no_cookie_message">No cookie sent by the server. Please contact technical support</string>
    <string name="unsuccessful_login_ioexception_title">Connection Exception</string>
    <string name="unsuccessful_login_ioexception_message">An Exception occurred during Connection. Please check your connection settings. If the error persists, contact technical support</string>
    <string name="existing_data_will_be_deleted_title">Delete existing data</string>
    <string name="existing_data_will_be_deleted_message">All data from the previous user will be deleted. Do you want to continue?</string>
    <string name="unknown_page">Invalid next page</string>
    <string name="no_next_page">No next page</string>
    <string name="plain_http_warning">Warning: insecure connection</string>
    <string name="probably_not_mounted">Unable to create file, likely because external storage is not currently mounted</string>
    <string name="too_many_devices">User has exceeded the maximum number of devices allowed</string>
    <string name="updating_application_list_title">Updating application list</string>
    <string name="updating_application_list_message">Connecting to the server to get an updated list of your applications</string>
    <string name="verifying_device_message">Device is identifying with the server</string>
    <string name="verifying_device_title">Device verification</string>
    <string name="verification_failed">Verification failed</string>
    <string name="logging_out_title">Logging out</string>
    <string name="logging_out_message">Logging out&#8230;</string>
    <string name="invalid_device">Invalid device</string>
    <string name="invalid_license">The application\'s license is invalid or has expired</string>
    <string name="captura_logo">Captura Logo</string>
    <string name="invalid_certificate_title">Invalid certificate</string>
    <string name="invalid_certificate_message">The server\'s certificate is invalid, please contact your system administrator</string>
    <string name="select_source">Select Source</string>
    <string name="is_required">%s is required</string>
    <string name="no_valid_file">%s has no valid file</string>
    <string name="server_response_not_200">Invalid server response: %1$d  URL: %2$s</string>
    <string name="android_application">Android Application</string>
    <string name="document_status_not_synced">Not synchronized</string>
    <string name="document_status_sync_failed">Synchronization failed</string>
    <string name="document_status_sync_in_progress">Sync in progress</string>
    <string name="document_status_rejected">Rejected by server</string>
    <string name="document_status_synced">Synchronized</string>
    <string name="document_status_draft">Draft</string>
    <string name="element_max_value_is">%1$s\'s max value is %2$d</string>
    <string name="element_max_length_is">%1$s\'s max length is %2$d</string>
    <string name="element_min_value_is">%1$s\'s min value is %2$d</string>
</resources>