<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/form_scrollview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/mf_background" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/form_layout_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/FormActionsLayout"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:background="@color/mf_background"
            android:orientation="vertical"
            android:padding="30dp" >

            <Button
                android:id="@+id/form_next_button"
                style="@style/mf_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/next"
                android:lines="1" />

            <LinearLayout
                android:id="@+id/FormSaveActionsLayout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/form_save_button"
                    style="@style/mf_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:lines="1"
                    android:singleLine="true"
                    android:layout_gravity="center_vertical" />

                <Button
                    android:id="@+id/form_save_and_new_button"
                    style="@style/mf_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save_and_new"

                    android:layout_margin="2dp"
                    android:singleLine="false"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
            <!-- <Button -->
            <!-- android:id="@+id/form_clear_button" -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:layout_alignTop="@+id/form_save_button" -->
            <!-- android:layout_toLeftOf="@+id/form_save_button" -->
            <!-- android:text="@string/clear" -->
            <!-- android:width="33pt" /> -->

        </LinearLayout>
    </LinearLayout>

</ScrollView>